[gd_scene load_steps=11 format=3 uid="uid://7cd52qdx0f6o"]

[ext_resource type="Script" uid="uid://d1avf6hyjgw6p" path="res://scripts/systems/CharacterSelect.gd" id="1_of04n"]
[ext_resource type="FontFile" uid="uid://c2ru0ylq10uj0" path="res://fonts/RobotoSerif-ExtraLight.ttf" id="2_2todw"]
[ext_resource type="PackedScene" uid="uid://cjq63cfdkencl" path="res://scenes/ui/CharacterPreview.tscn" id="2_fily5"]
[ext_resource type="PackedScene" uid="uid://d31r6uemhvpg" path="res://assets/scenes/mage.tscn" id="3_r0o0e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2todw"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.85882354, 0.72156864, 0.32941177, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fily5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.85882354, 0.72156864, 0.32941177, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0o0e"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.85882354, 0.72156864, 0.32941177, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_back"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.85882354, 0.72156864, 0.32941177, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjnfi"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.85882354, 0.72156864, 0.32941177, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_howtoplay"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.85882354, 0.72156864, 0.32941177, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_of04n")

[node name="CharacterPreview" parent="." instance=ExtResource("2_fily5")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
wizard_model = ExtResource("3_r0o0e")
wizard_preview_anim = "MAnim/IdleMagic"
knight_rotation = 25.0
rogue_rotation = 25.0
wizard_rotation = 25.0

[node name="NotAvailableLabel" type="Label" parent="CharacterPreview"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 60
text = "NOT AVAILABLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -240.0
offset_right = 800.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Knight" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_horizontal = 5
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_2todw")
theme_override_styles/hover = SubResource("StyleBoxFlat_fily5")
text = "Knight"

[node name="Rogue" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_horizontal = 5
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_2todw")
theme_override_styles/hover = SubResource("StyleBoxFlat_fily5")
text = "Rogue"

[node name="Wizard" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 0.6)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 0.6)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_2todw")
theme_override_styles/hover = SubResource("StyleBoxFlat_fily5")
text = "Wizard"
disabled = true

[node name="StrikethroughLabel" type="RichTextLabel" parent="CenterContainer/HBoxContainer/Wizard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.5, 0.5, 0.5, 0.6)
theme_override_fonts/normal_font = ExtResource("2_2todw")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center][s]Wizard[/s][/center]"
fit_content = true
scroll_active = false

[node name="HowToPlayPanel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 60.0
offset_top = 300.0
offset_right = 560.0
offset_bottom = 820.0
theme_override_styles/panel = SubResource("StyleBoxFlat_howtoplay")

[node name="MarginContainer" type="MarginContainer" parent="HowToPlayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPlayPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85882354, 0.72156864, 0.32941177, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 48
text = "HOW TO PLAY"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Movement" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "A / D - Move Left/Right"

[node name="Jump" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "Space - Jump"

[node name="LightAttack" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "Left Click - Light Attack Combo"

[node name="HeavyAttack" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "Right Click - Heavy Attack"

[node name="Dash" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "Shift - Dash / Sprint"

[node name="Dodge" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "Ctrl - Roll / Block"

[node name="Defensive" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "X - Defensive Ability"

[node name="Ultimate" type="Label" parent="HowToPlayPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 28
text = "R - Ultimate Ability"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
offset_left = 60.0
offset_top = 60.0
offset_right = 460.0
offset_bottom = 210.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_r0o0e")
theme_override_styles/hover = SubResource("StyleBoxFlat_back")
text = "Back"

[node name="PlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -460.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = 210.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_r0o0e")
theme_override_styles/hover = SubResource("StyleBoxFlat_hjnfi")
text = "Play"

[node name="ResetDiceButton" type="Button" parent="."]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -460.0
offset_top = 240.0
offset_right = -60.0
offset_bottom = 390.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_2todw")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_r0o0e")
theme_override_styles/hover = SubResource("StyleBoxFlat_hjnfi")
text = "Reset Dice Range
(10-10)"

[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/Knight" to="." method="_on_knight_hover"]
[connection signal="mouse_exited" from="CenterContainer/HBoxContainer/Knight" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Knight" to="." method="_on_knight_pressed"]
[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/Rogue" to="." method="_on_rogue_hover"]
[connection signal="mouse_exited" from="CenterContainer/HBoxContainer/Rogue" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Rogue" to="." method="_on_rogue_pressed"]
[connection signal="mouse_entered" from="CenterContainer/HBoxContainer/Wizard" to="." method="_on_wizard_hover"]
[connection signal="mouse_exited" from="CenterContainer/HBoxContainer/Wizard" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Wizard" to="." method="_on_wizard_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ResetDiceButton" to="." method="_on_reset_dice_button_pressed"]
